live-initrd-sidux (0.0.17) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET
  * add knoppix 5.1.0 linuxrc to contrib.
  * import license clarification from Klaus Knopper.

  [ Kel Modderman ]
  * Make cli options compat. as possible with mkinitrd.
  * Update maintainer address.

 -- Kel Modderman <kel@otaku42.de>  Sun, 31 Dec 2006 12:19:58 +1000

live-initrd-sidux (0.0.16) unstable; urgency=low

  [ Joaquim Boura ]
  * misplaced lines... (really one should parse the grub line)

  [ Kel Modderman ]
  * Really honor --output option.
  * Clean up trap usage.

 -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 23:30:47 +1000

live-initrd-sidux (0.0.15) unstable; urgency=low

  * Quick hack to ensure linuxrc is never symlinked to busybox.

 -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 08:57:32 +1000

live-initrd-sidux (0.0.14) unstable; urgency=low

  [ Joaquim Boura ]
  * load loop and squashfs modules.

  [ Kel Modderman ]
  * Print kernel version to stdout.

 -- Kel Modderman <kel@otaku42.de>  Sat, 30 Dec 2006 08:45:34 +1000

live-initrd-sidux (0.0.13) unstable; urgency=low

  * new unionfs cheat by slh now usable

 -- Niall Walsh <niallwalsh@users.berlios.de>  Tue, 19 Dec 2006 11:58:28 +0000

live-initrd-sidux (0.0.12) unstable; urgency=low

  * removed extra / before FLL_MOUNTPOINT

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 17 Dec 2006 01:06:54 +0100

live-initrd-sidux (0.0.11) unstable; urgency=low

  * fromiso was not working, fixed var name for the image.

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 17 Dec 2006 00:05:43 +0100

live-initrd-sidux (0.0.10) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * don't chmod sudoers, it can act as busybox test.

  [ Joaquim Boura ]
  * cheat code toram was failing. protect the var FLL_MEDIUM on some places

 -- Joaquim Boura <x-un-i@sidux.com>  Sat, 16 Dec 2006 09:49:45 +0100

live-initrd-sidux (0.0.9) unstable; urgency=low

  * fix /var/, /home/ usage.